--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 							<li class="active"><a href="index.html">Projects</a></li>
 							<li><a href="generic.html">Articles</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
+							<li><a href="final.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
