--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<li class="active"><a href="index.html">Projects</a></li>
 							<li><a href="generic.html">Articles</a></li>
 							<li><a href="elements.html">Publication</a></li>
-							<li><a href="final.html">Article similarity plot</a></li>
+							<li><a href="article_similarity.html">Article similarity plot</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
