--- a/article_similarity.html
+++ b/article_similarity.html
@@ -29,9 +29,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li class="active"><a href="elements.html">Elements Reference</a></li>
+							<li class="active"><a href="index.html">Projects</a></li>
+							<li><a href="generic.html">Articles</a></li>
+							<li><a href="elements.html">Publication</a></li>
+							<li><a href="article_similarity.html">Article similarity plot</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
