--- a/generic.html
+++ b/generic.html
@@ -25,9 +25,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">Projects</a></li>
-							<li class="active"><a href="generic.html">Articles</a></li>
-							<li><a href="elements.html">Publications</a></li>
+							<li class="active"><a href="index.html">Projects</a></li>
+							<li><a href="generic.html">Articles</a></li>
+							<li><a href="elements.html">Publication</a></li>
+							<li><a href="article_similarity.html">Article similarity plot</a></li>
 						</ul>
 					</nav>
 
