--- a/article_similarity.html
+++ b/article_similarity.html
@@ -29,10 +29,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Projects</a></li>
+							<li ><a href="index.html">Projects</a></li>
 							<li><a href="generic.html">Articles</a></li>
 							<li><a href="elements.html">Publication</a></li>
-							<li><a href="article_similarity.html">Article similarity plot</a></li>
+							<li class="active"><a href="article_similarity.html">Article similarity plot</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -107,24 +107,7 @@
           })();
         </script>
 
-									<hr />
-
-								<!-- Preformatted Code -->
-									<h2>Preformatted</h2>
-									<pre><code>i = 0;
-
-while (!deck.isInOrder()) {
-    print 'Iteration ' + i;
-    deck.shuffle();
-    i++;
-}
-
-print 'It took ' + i + ' iterations to sort the deck.';
-</code></pre>
-
-							</section>
-
-					</div>
+									
 
 				<!-- Footer -->
 					<footer id="footer">
