--- a/article_similarity.html
+++ b/article_similarity.html
@@ -106,7 +106,14 @@
             else document.addEventListener("DOMContentLoaded", fn);
           })();
         </script>
+			<hr />
 
+								<!-- Preformatted Code -->
+						
+
+							</section>
+
+					</div>
 									
 
 				<!-- Footer -->
